Rebasing some commits

--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -1,9 +1,9 @@
 <nav>
 	<ul>
-		<li><a href="/#">Home</a></li>
-		<li><a href="/#chapters">Lemma</a></li>
-		<li><a href="/#projects"></a>projects</li>
-		<li><a href="/#footnotes"></a>addenda</li>
-		<li><a href="/#tools"></a>tools</li>
+		<li><a href="{{ site.baseurl }}">Home</a></li>
+		<li><a href="{{ site.baseurl }}/chapters">Lemma</a></li>
+		<li><a href="{{ site.baseurl }}/projects"></a>projects</li>
+		<li><a href="{{ site.baseurl }}/footnotes"></a>addenda</li>
+		<li><a href="{{ site.baseurl }}/tools"></a>tools</li>
 	</ul>
 </nav>
