--- a/_includes/head.html
+++ b/_includes/head.html
@@ -1,6 +1,5 @@
 <!-- Basic information about this page -->
 <meta charset="UTF-8">
-<link rel="icon" type="image/x-icon" href="{{ site.baseurl }}/assets/img/fav.ico">
 <title>
 	{% if page.title %}
 		{{ page.title }} ::
@@ -17,9 +16,9 @@
 <meta name="keywords" content="{{ site.keywords }}{% if page.keywords %}, {{ page.keywords }}{% endif %}">
 <meta name="author" content="{{ site.name }}">
 
-<!-- Feed links -->
+<!-- Feed links
 <link rel="alternate" type="application/rss+xml" title="{{ site.name }}'s RSS Feed" href="{{ site.baseurl }}/rss.xml">
-<link rel="alternate" type="application/atom+xml" title="{{ site.name }}'s Atom Feed" href="{{ site.baseurl }}/atom.xml">
+<link rel="alternate" type="application/atom+xml" title="{{ site.name }}'s Atom Feed" href="{{ site.baseurl }}/atom.xml"> -->
 
 <!-- Style and scripts files -->
 <link rel="stylesheet" type="text/css" href="{{ site.baseurl }}/assets/css/style.css">
@@ -27,7 +26,7 @@
 <!-- Extra information about this page -->
 <link rel="license" type="text/plain" src="{{ site.baseurl }}/assets/LICENSE">
 
-{% include open_graph_cards.html %}
+<!-- {% include open_graph_cards.html %} -->
 
 {% if site.ssl %}
 <script type="text/javascript">
