--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -5,5 +5,11 @@ layout: default
 <header>
 	<h1>{{ page.title }}</h1>
 </header>
-
-{{ content }}
+<body>
+	{% include header.html %}
+	{% include nav.html %}
+	<main>
+		{{ content }}
+	</main>
+	{% include footer.html %}
+</body>
